# predict_result_match_dota2

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  contributing.md  pyproject.toml
src/: main.py
